syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message CustomControl {
    message PKey {
        
        string key = 10; // user defined key
        string client_firm = 11;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    string user_text = 100; // user defined text
    google.protobuf.Timestamp timestamp = 103;
}


